# PersianPoetryRAG

./: .gitignore  README.md
notebooks_experiments/: correct_word_line_numbering.ipynb  eda.ipynb  evaluation.ipynb  evaluation_dataset.parquet  extract_translation.ipynb  ganjoor.ipynb  pgvector_langchain.ipynb  pgvector_langchain_4B.ipynb  results.json  sentence_embeddings.ipynb  sentence_embeddings_with_book_error.ipynb  word_embeddings.ipynb
pipeline/: .gitignore  README.md  dvc.yaml  params.yaml  pyproject.toml  requirements.txt
pipeline/.dvc/: config
pipeline/data/prepared/: .gitignore
pipeline/evaluation/: .gitignore
pipeline/evaluation/plots/: .gitignore
pipeline/images/: finding_similar_beyts.drawio
pipeline/src/: create_embeddings.py  create_evaluation_questions.py  create_program_chunks.py  evaluate_rag.py  filter_generated_questions.py  snapshot_ghazal_table.py  snapshot_masnavi_bakhsh_table.py  snapshot_masnavi_table.py  snapshot_programs_table.py  translate_ghazal.py  translate_programs.py
pipeline/src/utils/: common_embeddings.py  create_embeddings_ghazal.py  create_embeddings_masnavi.py  create_embeddings_programs.py  dump_table.py
rag/: bm25.py  load_model.py  rag.py  reranker.py  translation.py
rag_backend/: .env_example  .gitignore  README.md  bentofile.yaml  params.yaml  pyproject.toml  requirement.txt  service.py
rag_frontend/: .gitignore  README.md  index.html  package.json
rag_frontend/src/: App.vue
